[gd_scene load_steps=4 format=3 uid="uid://bp0h3drudi8ii"]

[ext_resource type="Script" uid="uid://cato2gx1ugr2q" path="res://src/ui/menu/match_entry.gd" id="1_jmxgq"]
[ext_resource type="Script" uid="uid://cmj15i03jv6b" path="res://src/ui/button/change_scene_button.gd" id="2_cw6wu"]
[ext_resource type="Theme" uid="uid://b0yl85gha4apv" path="res://themes/main_theme.tres" id="2_od57r"]

[node name="MatchEntry" type="HBoxContainer"]
process_mode = 3
offset_right = 100.0
offset_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_jmxgq")

[node name="Button" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_od57r")
script = ExtResource("2_cw6wu")

[connection signal="property_list_changed" from="." to="." method="_on_property_list_changed"]
[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="resized" from="Button" to="Button" method="__resize_font"]
